--- a/Codes/Baseline_bidir_lstm_gru.ipynb
+++ b/Codes/Baseline_bidir_lstm_gru.ipynb
@@ -223,58 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 1\n",
-      "Start loading embedding....................\n",
-      "Embedding matrix shape: (120000, 300)\n",
-      "train   1.0    0.0        |  290.292  |   inf   |  0 hr 02 minn\n",
-      "val   0.0    0.0        |  290.292  |   34084.180   |  0 hr 02 min\n",
-      "\n",
-      "train   2.0    1.0        |  263.108  |   34084.180   |  0 hr 04 min\n",
-      "val   1.0    1.0        |  263.108  |   37739.531   |  0 hr 04 min\n",
-      "\n",
-      "EarlyStopping counter: 1 out of 7\n",
-      "train   3.0    2.0        |  258.640  |   37739.531   |  0 hr 07 min\n",
-      "val   2.0    2.0        |  258.640  |   33526.477   |  0 hr 07 min\n",
-      "\n",
-      "Validation loss decreased (inf --> 33526.476562) ...\n",
-      "train   4.0    3.0        |  255.557  |   33526.477   |  0 hr 09 min\n",
-      "val   3.0    3.0        |  255.557  |   33423.453   |  0 hr 09 min\n",
-      "\n",
-      "Validation loss decreased (33526.476562 --> 33423.453125) ...\n",
-      "train   5.0    4.0        |  253.059  |   33423.453   |  0 hr 12 min\n",
-      "val   4.0    4.0        |  253.059  |   31765.967   |  0 hr 12 min\n",
-      "\n",
-      "Validation loss decreased (33423.453125 --> 31765.966797) ...\n",
-      "train   6.0    5.0        |  250.388  |   31765.967   |  0 hr 14 min\n",
-      "val   5.0    5.0        |  250.388  |   31314.385   |  0 hr 14 min\n",
-      "\n",
-      "Validation loss decreased (31765.966797 --> 31314.384766) ...\n",
-      "train   7.0    6.0        |  248.541  |   31314.385   |  0 hr 16 min\n",
-      "val   6.0    6.0        |  248.541  |   38762.523   |  0 hr 17 min\n",
-      "\n",
-      "EarlyStopping counter: 1 out of 7\n",
-      "train   8.0    7.0        |  245.652  |   38762.523   |  0 hr 19 min\n",
-      "val   7.0    7.0        |  245.652  |   35862.047   |  0 hr 19 min\n",
-      "\n",
-      "EarlyStopping counter: 2 out of 7\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for /: 'list' and 'int'",
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-fd130309cae3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;31m# test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[0mtest_preds_fold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_loader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m     \u001b[0mtest_preds\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtest_preds_fold\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m     \u001b[0;31m# end k-fold\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'list' and 'int'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-afe4c89b27dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# -------------------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrain_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtest_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
